applications/base/spring-petclinic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
  labels:
    app: spring-petclinic
spec:
  selector:
    matchLabels:
      app: spring-petclinic
  replicas: 1 # tells deployment to run 3 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: spring-petclinic
    spec:
      serviceAccountName: dev
      containers:
        - name: spring-petclinic
          image: harbor.nb.no/nbtest/spring-petclinic:3.3.0-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /etc/localtime
              name: tz-config
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 300
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Europe/Oslo
