applications/base/spring-petclinic/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spring-petclinic
  labels:
    app: springactuator
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: spring-petclinic
  type: ClusterIP
