applications/base/spring-petclinic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-petclinic
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: api.local.nb.no
    http:
      paths:
      - path: /catalog/v1/contentsearch
        pathType: Prefix
        backend:
          service:
            name: spring-petclinic
            port:
              number: 8080
